# 25fw-kubig-mas

./: .dockerignore  .env.example  .gitignore  20251223.json  Dockerfile  FullPlan.md  Lambda.md  ORCHESTRATOR.md  ORCHESTRATOR_DEBATE_INTEGRATION_PLAN.md  Opening-Agent-Design.md  README.md  WEB.md  debate-agent-plan.md  fetch.py  news_list.py  orchestrator.py  podcast_db.py  run_theme_agent.py  todo.md  upload_latest_to_dynamodb.py
.temp/: GOOG_ticker_pipeline.json  closing.json  opening.json  theme.json
ClosingAgent/: PLAN.md
Lambda/: .env.example  article_crawler.py  aws_dynamo.py  aws_lambda_handler.py  detail_crawl.py  download_latest_html.py  upload_db.py  upload_s3.py  yahoo_fetch.py
stock-morning-main/: .gitignore  GOOG_20251228_154422_debate.json  README.md  final.md  langgraph.json  pyproject.toml  run.py
stock-morning-main/aws_fetchers/: __init__.py  yahoo_news_fetcher.py
stock-morning-main/docs/: DATA_COLLECTION.md
stock-morning-main/multiagent/: __init__.py  config.py  graph.py  prompts.py  schemas.py
stock-morning-main/multiagent/agents/: __init__.py  base_agent.py  fundamental_analyst.py  growth_analyst.py  moderator.py  news_agent.py  placeholder_agent.py  risk_manager.py  sec_agent.py  sentiment_analyst.py
stock-morning-main/multiagent/nodes/: __init__.py  agent_stage.py  data_collector.py
stock-morning-main/multiagent/services/: __init__.py  conclusion_parser.py  consensus.py  market_data.py  toolkit.py
stock-morning-main/src/: db.py  sec_crawler.py  time_utils.py
stock-morning-main/src/database/: __init__.py  data_fetcher.py
(+194 files in other folders)
